<resources>
    <string name="app_name">oggetto</string>
    <string name="Oggetto">Oggetto</string>
    <string name="event">Event</string>
    <string name="email">E-mail</string>
    <string name="registration">регистрация</string>
    <string name="enter">войти</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="enter_reg">вход</string>
    <string name="next_step">далее</string>
    <string name="list_info_1">Создание аккаунта</string>
    <string name="list_info_2">О себе</string>
    <string name="list_info_3">Загрузка фото\nи список интересов</string>
    <string name="list_info_4">Соцсеточки</string>
    <string name="link_inst">Ссылка на Instagram</string>
    <string name="link_tel">Ссылка на Telegram</string>
    <string name="link_vk">Ссылка на VK</string>
    <string name="stop">закончить</string>
    <string name="warning_email_1">email должен быть в зоне @oggettoweb.com</string>
    <string name="back_step">назад</string>
    <string name="oggetto">Oggetto</string>
    <string name="fio">ФИО</string>
    <string name="profession">Профессия</string>
    <string name="any_facts">Пару слов о себе</string>
    <string name="text_greet">Познакомишься\nс командой Oggetto?</string>
    <string name="text_quest">Тут пример\nвопроса про коллегу</string>
    <string name="manager_w">Manager</string>
    <string name="front_w">Front-end</string>
    <string name="back_w">Back-end</string>
    <string name="boss_w">Boss</string>
    <string name="profileHeader">Список событий\nсотрудников Oggetto.\nВы можете присоединиться\nк любому из них или\nобъявить о своем</string>

    <string name="make_event">Создание\nмероприятия</string>


</resources>