<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/line_info_reg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_ellipse_reg_3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" >
                </ImageView>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="63dp"
                    android:layout_height="115dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginBottom="40dp"
                    android:src="@drawable/line_page"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat"
                    android:text="4"
                    android:textColor="@color/black"
                    android:textSize="80sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="70dp"
                    android:layout_marginBottom="75dp"
                    android:shadowColor="@color/black"
                    android:shadowRadius="5"
                    android:text="4"
                    android:textColor="@color/white"
                    android:textSize="80sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/oggetto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="90dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/Oggetto"
                    android:textColor="@color/black"
                    android:textSize="42sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_marginTop="-10dp"
                    android:id="@+id/event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/event"
                    android:textColor="@color/black"
                    android:textSize="42sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/oggetto" />

                <TextView
                    android:id="@+id/list_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/list_info_4"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/event" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/line_inst"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/ic_inst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/stroke_round"
                    android:src="@drawable/ic_inst"
                    android:padding="19dp"
                    android:paddingEnd="21dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:singleLine="true"
                    android:windowSoftInputMode="stateHidden"
                    android:scrollHorizontally="true"
                    android:id="@+id/input_inst"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/stroke_round"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/link_inst"
                    android:lines="1"
                    android:padding="14dp"
                    android:textColorHint="@color/black"
                    android:layout_marginStart="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ic_inst"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/line_telegram"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/ic_telegram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/stroke_round"
                    android:src="@drawable/ic_telegram"
                    android:padding="19dp"
                    android:paddingEnd="21dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:windowSoftInputMode="stateHidden"
                    android:scrollHorizontally="true"
                    android:id="@+id/inputLinkTelegram"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/stroke_round"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/link_tel"
                    android:lines="1"
                    android:padding="14dp"
                    android:textColorHint="@color/black"
                    android:layout_marginStart="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ic_telegram"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/line_vk"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/ic_vk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/stroke_round"
                    android:padding="19dp"
                    android:paddingEnd="20dp"
                    android:src="@drawable/ic_vk"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:singleLine="true"
                    android:windowSoftInputMode="stateHidden"
                    android:scrollHorizontally="true"
                    android:id="@+id/input_vk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/stroke_round"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/link_vk"
                    android:lines="1"
                    android:padding="14dp"
                    android:textColorHint="@color/black"
                    android:layout_marginStart="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ic_vk"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/line_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:onClick="goBackFragment3"
                    android:id="@+id/ic_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/btn_enter"/>

                <ImageView
                    android:id="@+id/ic_enter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_enter"
                    android:onClick="endRegistration"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/btn_enter"/>

                <TextView
                    android:onClick="goBackFragment3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/back_step"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/ic_back"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btn_enter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:onClick="endRegistration"
                    android:text="@string/stop"
                    android:textColor="@color/yellow"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/ic_enter"
                    app:layout_constraintTop_toTopOf="parent" />



            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/incorrect_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:visibility="gone"
                android:layout_marginStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/imageError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_incorrect_data"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/warning_email_1"
                    app:layout_constraintTop_toBottomOf="@+id/imageError"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>